; ModuleID = '/home/carl/AnghaBench/nginx/src/core/extr_ngx_slab.c_ngx_slab_calloc_locked.c'
source_filename = "/home/carl/AnghaBench/nginx/src/core/extr_ngx_slab.c_ngx_slab_calloc_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ngx_slab_calloc_locked(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i64, i64* %4, align 8
  %8 = call i8* @ngx_slab_alloc_locked(i32* %6, i64 %7)
  store i8* %8, i8** %5, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load i8*, i8** %5, align 8
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @ngx_memzero(i8* %12, i64 %13)
  br label %15

15:                                               ; preds = %11, %2
  %16 = load i8*, i8** %5, align 8
  ret i8* %16
}

declare dso_local i8* @ngx_slab_alloc_locked(i32*, i64) #1

declare dso_local i32 @ngx_memzero(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
